# protoforge

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: REQUIREMENTS.md  STYLE_GUIDE.md  plugin-system.md
scripts/: generate-icons.mjs  sync-version.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  monacoWorkers.ts
src-tauri/: Cargo.toml  build.rs  check_errors.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/backup_no_padding/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_response_example.sql  003_workflow_schema.sql  004_add_item_variables.sql  005_mock_server.sql  006_db_client.sql  007_db_client_influx_version.sql
src-tauri/src/: builtin_parsers.rs  collections.rs  commands.rs  data_export.rs  database.rs  grpc_client.rs  http_client.rs  lib.rs  load_test.rs  main.rs  mock_server.rs  mqtt_client.rs  plugin_runtime.rs  postman_compat.rs  proxy_capture.rs  script_engine.rs  sse_client.rs  swagger_import.rs  tcp_client.rs  toolbox.rs  wasm_runtime.rs  workflow_engine.rs  ws_client.rs
src-tauri/src/db_client/: crypto.rs  driver.rs  export.rs  influxdb.rs  mod.rs  mysql.rs  postgres.rs  sqlite_driver.rs
src-tauri/src/plugins/: mac_rounded_corners.rs
src-tauri/src/video_streaming/: ffmpeg_manager.rs  gb28181.rs  hls.rs  http_flv.rs  media_gateway.rs  mod.rs  onvif.rs  player.rs  rtmp.rs  rtsp.rs  srt.rs  state.rs  webrtc.rs
src/components/: ComingSoon.tsx  WelcomePage.tsx
src/hooks/: useKeyboardShortcuts.ts  useLanguageSync.ts  useSettingsEffect.ts  useUrlAutocomplete.ts  useWindowFrameGestures.ts  useWindowMaximized.ts
src/lib/: clipboard.ts  collectionRequest.ts  connectionRegistry.ts  curlGenerator.ts  easyPlayerLoader.ts  (+12 more)
(+186 files in other folders)
