[package]
name = "protoforge"
version = "0.1.0"
description = "ProtoForge - A modern API development and testing tool built with Tauri"
authors = ["chenqi"]
license = "MIT"
repository = "https://github.com/chenqi92/protoforge"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "protoforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-proxy"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["rustls", "json", "cookies", "gzip", "brotli", "deflate", "multipart", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
hudsucker = { version = "0.24", features = ["rcgen-ca"] }
rcgen = "0.14"
http = "1"
bytes = "1"
boa_engine = "0.20"
boa_runtime = "0.20"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rumqttc = "0.24"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
wasmtime = "29"
encoding_rs = "0.8"

